# SD-1-Lista

./: ArrayList.cpp  ArrayList.h  ArrayList.hpp  BaseList.hpp  CMakeLists.txt  DoublyLinkedList.cpp  DoublyLinkedList.hpp  TestGenerator.cpp  TestGenerator.hpp  Utility.hpp  main.cpp
